--- a/ciona_data/pull_ciona_data_interactive.ipynb
+++ b/ciona_data/pull_ciona_data_interactive.ipynb
@@ -128,7 +128,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Find the connections and correctly label the nodes "
+    "Find the connections and correctly label the nodes"
    ],
    "metadata": {
     "collapsed": false,
@@ -271,7 +271,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "put in json spec \n"
+    "put in json spec"
    ],
    "metadata": {
     "collapsed": false
@@ -279,9 +279,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "outputs": [],
-   "source": [],
+   "source": [
+    "from graph import GraphIO\n",
+    "GraphIO.dump(graph, './ciona.json')\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
