remove total node

--- a/ciona_data/pull_ciona_data_interactive.ipynb
+++ b/ciona_data/pull_ciona_data_interactive.ipynb
@@ -460,8 +460,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'lens6', 'pnw', '44', '19', 'coronet10', 'coronet5', '40'}\n",
-      "{'lens7', '35', '5', '113', 'murm', 'mulm', 'midtail7', '181', 'coronet14', 'bm', 'coronet2', 'bm-noto', 'pns2', 'mur', '57', 'pns14', 'mul'}\n"
+      "{'44', 'coronet5', 'lens6', 'coronet10', 'pnw', '40', '19'}\n",
+      "{'midtail7', 'bm', 'pns2', '57', '113', 'mulm', 'murm', 'lens7', 'bm-noto', 'coronet2', 'pns14', 'mul', '35', 'coronet14', '5', '181', 'mur'}\n"
      ]
     }
    ],
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -514,6 +514,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th>nan</th>\n",
+       "      <th>nan</th>\n",
        "      <th>pns1</th>\n",
        "      <th>pns10</th>\n",
        "      <th>pns11</th>\n",
@@ -523,8 +524,8 @@
        "      <th>pns2</th>\n",
        "      <th>pns3</th>\n",
        "      <th>pns4</th>\n",
-       "      <th>pns5</th>\n",
        "      <th>...</th>\n",
+       "      <th>BTN1</th>\n",
        "      <th>BTN2</th>\n",
        "      <th>BTN3</th>\n",
        "      <th>BTN4</th>\n",
@@ -534,7 +535,6 @@
        "      <th>murm</th>\n",
        "      <th>bm</th>\n",
        "      <th>bm-noto</th>\n",
-       "      <th>Total</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -564,6 +564,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>pns1</th>\n",
+       "      <td>pns1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -573,7 +574,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.12</td>\n",
        "      <td>0.18</td>\n",
-       "      <td>0.24</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -582,12 +582,13 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.24</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4.38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pns10</th>\n",
+       "      <td>pns10</td>\n",
        "      <td>0.66</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.62</td>\n",
@@ -597,7 +598,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.9</td>\n",
        "      <td>1.26</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -608,10 +608,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>13.98</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pns11</th>\n",
+       "      <td>pns11</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.42</td>\n",
        "      <td>0.0</td>\n",
@@ -621,8 +622,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.24</td>\n",
        "      <td>0.12</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.47</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -632,10 +633,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>16.19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pns12</th>\n",
+       "      <td>pns12</td>\n",
        "      <td>0.12</td>\n",
        "      <td>1.02</td>\n",
        "      <td>0.24</td>\n",
@@ -645,7 +646,6 @@
        "      <td>0.0</td>\n",
        "      <td>1.02</td>\n",
        "      <td>0.36</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -656,10 +656,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>12.78</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pns13</th>\n",
+       "      <td>pns13</td>\n",
        "      <td>0.78</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -669,8 +670,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.42</td>\n",
        "      <td>0.24</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -680,7 +681,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.18</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -688,26 +688,26 @@
        "</div>"
       ],
       "text/plain": [
-       "nan    pns1 pns10 pns11 pns12 pns13 pns14 pns2  pns3  pns4  pns5  ... BTN2  \\\n",
-       "0                                                                 ...        \n",
-       "pns1    0.0   0.0   0.0   0.0  0.96   0.0  0.0  0.12  0.18  0.24  ...  0.0   \n",
-       "pns10  0.66   0.0  1.62  0.72  0.12   0.0  0.0   0.9  1.26   0.0  ...  0.0   \n",
-       "pns11   0.0  0.42   0.0  0.18   0.0   0.0  0.0  0.24  0.12   0.0  ...  0.0   \n",
-       "pns12  0.12  1.02  0.24   0.0  0.54   0.0  0.0  1.02  0.36   0.0  ...  0.0   \n",
-       "pns13  0.78   0.0   0.0   0.0   0.0   0.0  0.0  0.42  0.24   0.0  ...  0.0   \n",
+       "nan      nan  pns1 pns10 pns11 pns12 pns13 pns14 pns2  pns3  pns4  ...  BTN1  \\\n",
+       "0                                                                  ...         \n",
+       "pns1    pns1   0.0   0.0   0.0   0.0  0.96   0.0  0.0  0.12  0.18  ...   0.0   \n",
+       "pns10  pns10  0.66   0.0  1.62  0.72  0.12   0.0  0.0   0.9  1.26  ...   0.0   \n",
+       "pns11  pns11   0.0  0.42   0.0  0.18   0.0   0.0  0.0  0.24  0.12  ...  0.47   \n",
+       "pns12  pns12  0.12  1.02  0.24   0.0  0.54   0.0  0.0  1.02  0.36  ...   0.0   \n",
+       "pns13  pns13  0.78   0.0   0.0   0.0   0.0   0.0  0.0  0.42  0.24  ...   0.0   \n",
        "\n",
-       "nan   BTN3 BTN4  mul mulm  mur murm    bm bm-noto  Total  \n",
-       "0                                                         \n",
-       "pns1   0.0  0.0  0.0  0.0  0.0  0.0  0.24     0.0   4.38  \n",
-       "pns10  0.0  0.0  0.0  0.0  0.0  0.0   0.0     0.0  13.98  \n",
-       "pns11  0.0  0.0  0.0  0.0  0.0  0.0   0.0     0.0  16.19  \n",
-       "pns12  0.0  0.0  0.0  0.0  0.0  0.0   0.0     0.0  12.78  \n",
-       "pns13  0.0  0.0  0.0  0.0  0.0  0.0  0.18     0.0    2.4  \n",
+       "nan   BTN2 BTN3 BTN4  mul mulm  mur murm    bm bm-noto  \n",
+       "0                                                       \n",
+       "pns1   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.24     0.0  \n",
+       "pns10  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0     0.0  \n",
+       "pns11  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0     0.0  \n",
+       "pns12  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0     0.0  \n",
+       "pns13  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.18     0.0  \n",
        "\n",
        "[5 rows x 216 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,12 +721,14 @@
     "common_adj.columns = common_adj.iloc[0, :].apply(str_strip)\n",
     "common_adj.drop(common_adj.index[0], axis=0, inplace=True)\n",
     "common_adj.drop(common_adj.columns[0], axis=1, inplace=True)\n",
+    "common_adj.drop('Total', axis=0, inplace=True)\n",
+    "common_adj.drop('Total', axis=1, inplace=True)\n",
     "common_adj.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -754,6 +756,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>nan</th>\n",
        "      <th>pns1</th>\n",
        "      <th>pns10</th>\n",
        "      <th>pns11</th>\n",
@@ -763,18 +766,17 @@
        "      <th>pns2</th>\n",
        "      <th>pns3</th>\n",
        "      <th>pns4</th>\n",
-       "      <th>pns5</th>\n",
        "      <th>...</th>\n",
+       "      <th>murm</th>\n",
        "      <th>bm</th>\n",
        "      <th>bm-noto</th>\n",
-       "      <th>Total</th>\n",
-       "      <th>lens6</th>\n",
-       "      <th>pnw</th>\n",
        "      <th>44</th>\n",
-       "      <th>19</th>\n",
-       "      <th>coronet10</th>\n",
        "      <th>coronet5</th>\n",
+       "      <th>lens6</th>\n",
+       "      <th>coronet10</th>\n",
+       "      <th>pnw</th>\n",
        "      <th>40</th>\n",
+       "      <th>19</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -804,6 +806,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>pns1</th>\n",
+       "      <td>pns1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -813,11 +816,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.12</td>\n",
        "      <td>0.18</td>\n",
-       "      <td>0.24</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.24</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4.38</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -828,6 +830,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pns10</th>\n",
+       "      <td>pns10</td>\n",
        "      <td>0.66</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.62</td>\n",
@@ -837,11 +840,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.9</td>\n",
        "      <td>1.26</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>13.98</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -852,6 +854,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pns11</th>\n",
+       "      <td>pns11</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.42</td>\n",
        "      <td>0.0</td>\n",
@@ -861,11 +864,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.24</td>\n",
        "      <td>0.12</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>16.19</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -876,6 +878,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pns12</th>\n",
+       "      <td>pns12</td>\n",
        "      <td>0.12</td>\n",
        "      <td>1.02</td>\n",
        "      <td>0.24</td>\n",
@@ -885,11 +888,10 @@
        "      <td>0.0</td>\n",
        "      <td>1.02</td>\n",
        "      <td>0.36</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>12.78</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -900,6 +902,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pns13</th>\n",
+       "      <td>pns13</td>\n",
        "      <td>0.78</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -909,11 +912,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.42</td>\n",
        "      <td>0.24</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.18</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.4</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -928,26 +930,26 @@
        "</div>"
       ],
       "text/plain": [
-       "       pns1 pns10 pns11 pns12 pns13 pns14 pns2  pns3  pns4  pns5  ...    bm  \\\n",
-       "0                                                                 ...         \n",
-       "pns1    0.0   0.0   0.0   0.0  0.96   0.0  0.0  0.12  0.18  0.24  ...  0.24   \n",
-       "pns10  0.66   0.0  1.62  0.72  0.12   0.0  0.0   0.9  1.26   0.0  ...   0.0   \n",
-       "pns11   0.0  0.42   0.0  0.18   0.0   0.0  0.0  0.24  0.12   0.0  ...   0.0   \n",
-       "pns12  0.12  1.02  0.24   0.0  0.54   0.0  0.0  1.02  0.36   0.0  ...   0.0   \n",
-       "pns13  0.78   0.0   0.0   0.0   0.0   0.0  0.0  0.42  0.24   0.0  ...  0.18   \n",
+       "         nan  pns1 pns10 pns11 pns12 pns13 pns14 pns2  pns3  pns4  ... murm  \\\n",
+       "0                                                                  ...        \n",
+       "pns1    pns1   0.0   0.0   0.0   0.0  0.96   0.0  0.0  0.12  0.18  ...  0.0   \n",
+       "pns10  pns10  0.66   0.0  1.62  0.72  0.12   0.0  0.0   0.9  1.26  ...  0.0   \n",
+       "pns11  pns11   0.0  0.42   0.0  0.18   0.0   0.0  0.0  0.24  0.12  ...  0.0   \n",
+       "pns12  pns12  0.12  1.02  0.24   0.0  0.54   0.0  0.0  1.02  0.36  ...  0.0   \n",
+       "pns13  pns13  0.78   0.0   0.0   0.0   0.0   0.0  0.0  0.42  0.24  ...  0.0   \n",
        "\n",
-       "      bm-noto  Total lens6  pnw   44   19 coronet10 coronet5   40  \n",
-       "0                                                                  \n",
-       "pns1      0.0   4.38   0.0  0.0  0.0  0.0       0.0      0.0  0.0  \n",
-       "pns10     0.0  13.98   0.0  0.0  0.0  0.0       0.0      0.0  0.0  \n",
-       "pns11     0.0  16.19   0.0  0.0  0.0  0.0       0.0      0.0  0.0  \n",
-       "pns12     0.0  12.78   0.0  0.0  0.0  0.0       0.0      0.0  0.0  \n",
-       "pns13     0.0    2.4   0.0  0.0  0.0  0.0       0.0      0.0  0.0  \n",
+       "         bm bm-noto   44 coronet5 lens6 coronet10  pnw   40   19  \n",
+       "0                                                                 \n",
+       "pns1   0.24     0.0  0.0      0.0   0.0       0.0  0.0  0.0  0.0  \n",
+       "pns10   0.0     0.0  0.0      0.0   0.0       0.0  0.0  0.0  0.0  \n",
+       "pns11   0.0     0.0  0.0      0.0   0.0       0.0  0.0  0.0  0.0  \n",
+       "pns12   0.0     0.0  0.0      0.0   0.0       0.0  0.0  0.0  0.0  \n",
+       "pns13  0.18     0.0  0.0      0.0   0.0       0.0  0.0  0.0  0.0  \n",
        "\n",
        "[5 rows x 223 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1184,7 @@
        "[5 rows x 223 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,19 +1197,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "got adj to nx\n"
+      "{'nan'}\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-d10ac4df9989>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommon_adj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommon_adj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommon_adj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommon_adj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommon_adj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintersection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommon_adj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mcommon_adj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcommon_adj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mgraph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_pandas_adjacency\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommon_adj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: "
      ]
     }
    ],
    "source": [
     "if list(common_adj.index) != list(common_adj.columns):\n",
+    "    print((set(common_adj.index) | set(common_adj.columns)) - (set(common_adj.index).intersection(set(common_adj.columns))))\n",
     "    raise ValueError\n",
     "common_adj.iloc[:, :] = common_adj.values.astype(np.float)\n",
     "graph = nx.from_pandas_adjacency(common_adj)\n",
