Update instructions and add code for more metadata

--- a/Neuprint/DiGraph-Neuprint.ipynb
+++ b/Neuprint/DiGraph-Neuprint.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
        "[8034510 rows x 9 columns]>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,14 +45,18 @@
    "source": [
     "import pandas as pd\n",
     "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "from graph import GraphIO\n",
     "G_Neuprint = nx.DiGraph()\n",
     "df = pd.read_csv('Neuprint_connections.csv')\n",
+    "df_2 = pd.read_csv('Neuprint_neuron_all.csv')\n",
+    "df_3 = pd.read_csv('neuPrint_roicounts.csv')\n",
     "df.head"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,12 +72,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Id = list(df_2['bodyId'])\n",
+    "ins = list(df_2['instance'])\n",
+    "tp = list(df_2['type'])\n",
+    "pr = list(df_2['pre'])\n",
+    "po = list(df_2['post'])\n",
+    "\n",
+    "s = list(df_2['size'])\n",
+    "sta = list(df_2['status'])\n",
+    "cro = list(df_2['cropped'])\n",
+    "staL= list(df_2['statusLabel'])\n",
+    "\n",
+    "cBF = list(df_2['cellBodyFiber'])\n",
+    "somaR = list(df_2['somaRadius'])\n",
+    "somaL = list(df_2['somaLocation'])\n",
+    "inR = list(df_2['inputRois'])\n",
+    "outR = list(df_2['outputRois'])\n",
+    "RInfo = list(df_2['roiInfo'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "Id_3 = list(df_3['bodyId'])\n",
+    "Rcount_roi = list(df_3['roi'])\n",
+    "Rcount_pre = list(df_3['pre'])\n",
+    "Rcount_post = list(df_3['post'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "n = 0\n",
-    "for i in Id_pre:\n",
+    "for i in Id:\n",
+    "    G_Neuprint.add_node(Id[n])\n",
+    "    G_Neuprint.nodes[Id[n]][\"instance\"] = ins[n]\n",
+    "    G_Neuprint.nodes[Id[n]][\"type\"] = tp[n]\n",
+    "    G_Neuprint.nodes[Id[n]][\"pre\"] = pr[n]\n",
+    "    G_Neuprint.nodes[Id[n]][\"post\"] = po[n]\n",
+    "    \n",
+    "    G_Neuprint.nodes[Id[n]][\"size\"] = s[n]\n",
+    "    G_Neuprint.nodes[Id[n]][\"status\"] = sta[n]\n",
+    "    G_Neuprint.nodes[Id[n]][\"cropped\"] = cro[n]\n",
+    "    G_Neuprint.nodes[Id[n]][\"statusLabel\"] = staL[n]\n",
+    "    \n",
+    "    G_Neuprint.nodes[Id[n]][\"cellBodyFiber\"] = cBF[n]\n",
+    "    G_Neuprint.nodes[Id[n]][\"somaRadius\"] = somaR[n]\n",
+    "    G_Neuprint.nodes[Id[n]][\"somaLocation\"] = somaL[n]\n",
+    "    G_Neuprint.nodes[Id[n]][\"inputRois\"] = inR[n]\n",
+    "    G_Neuprint.nodes[Id[n]][\"outputRois\"] = outR[n]\n",
+    "    G_Neuprint.nodes[Id[n]][\"roiInfo\"] = RInfo[n]\n",
+    "    n = n + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 0\n",
+    "for j in Id_3:\n",
+    "    G_Neuprint.nodes[Id_3[n]][\"roicounts_name\"] = Rcount_roi[n]\n",
+    "    G_Neuprint.nodes[Id_3[n]][\"roicounts_pre\"] = Rcount_pre[n]\n",
+    "    G_Neuprint.nodes[Id_3[n]][\"roicounts_post\"] = Rcount_post[n]\n",
+    "    n = n + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 0\n",
+    "for k in Id_pre:\n",
     "    G_Neuprint.add_edge(Id_pre[n], Id_post[n])\n",
     "    G_Neuprint.edges[Id_pre[n], Id_post[n]]['weight'] = wt[n]\n",
     "    G_Neuprint.edges[Id_pre[n], Id_post[n]]['ROI'] = R_l[n]\n",
@@ -86,22 +169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<networkx.classes.digraph.DiGraph at 0x2371fbe91c8>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "G_Neuprint"
+    "edge_att_names = GraphIO.infer_edge_attributes([G_Neuprint])\n",
+    "node_att_names = GraphIO.infer_node_attributes([G_Neuprint])\n",
+    "graph_att_names = GraphIO.infer_graph_attributes([G_Neuprint])\n",
+    "GraphIO.dump([G_Neuprint], './Neuprint/Neuprint_graph_update031621.mgraph', edge_att_names, node_att_names, graph_att_names)"
    ]
   }
  ],
