--- a/Neuprint/Instruction_Neuprint.ipynb
+++ b/Neuprint/Instruction_Neuprint.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The instructions below was based on the description from [neuPrintExplorer](https://neuprint.janelia.org/help/cypherexamples). For more information, please visit the original website."
+    "The instructions below was based on the description from [neuPrintExplorer](https://neuprint.janelia.org/help/cypherexamples). For more information, please visit the original website. A technical neuPrint paper exists [here](https://www.biorxiv.org/content/10.1101/2020.01.16.909465v1.full)."
    ]
   },
   {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "[8034510 rows x 9 columns]>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -248,11 +248,11 @@
       "KCab-c      63125\n",
       "LC10        40780\n",
       "            ...  \n",
-      "DNa07           2\n",
       "WED183          2\n",
+      "DNa07           2\n",
       "WED084          1\n",
-      "AOTU036         1\n",
       "DNES1           1\n",
+      "AOTU036         1\n",
       "Length: 5617, dtype: int64\n"
      ]
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -300,24 +300,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KCg-m_R           197167\n",
-      "KCab-m_R          103932\n",
-      "KCab-s_R           67060\n",
-      "KCab-c_R           63125\n",
-      "(MBDLaxon1)        48392\n",
-      "                   ...  \n",
-      "(ADM12)_L              1\n",
-      "WED084_R               1\n",
-      "LPTC HS? piece         1\n",
-      "(PDM31)_R              1\n",
-      "(AVM09)_R              1\n",
+      "KCg-m_R        197167\n",
+      "KCab-m_R       103932\n",
+      "KCab-s_R        67060\n",
+      "KCab-c_R        63125\n",
+      "(MBDLaxon1)     48392\n",
+      "                ...  \n",
+      "(PDM31)_R           1\n",
+      "DNES1_R             1\n",
+      "AOTU036_R           1\n",
+      "(ADM12)_L           1\n",
+      "(AVM09)_R           1\n",
       "Length: 7792, dtype: int64\n"
      ]
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -341,9 +341,9 @@
       "KCab-c_R      56578\n",
       "LC10          42490\n",
       "              ...  \n",
-      "Franken6          5\n",
       "(PVM02)_R         5\n",
-      "(PDM14)_R         5\n",
+      "Franken1          5\n",
+      "Franken6          5\n",
       "(PDM31)_R         4\n",
       "(AVL22)_R         2\n",
       "Length: 7802, dtype: int64\n"
@@ -352,6 +352,37 @@
    ],
    "source": [
     "print(pd.value_counts(ins_post))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More information about the node attributes\n",
+    "\n",
+    ":Segment (:Neuron) nodes\n",
+    "\n",
+    "#### bodyId: a unique number for each distinct segment\n",
+    "\n",
+    "#### pre: Number of pre-synaptic sites on the segment\n",
+    "\n",
+    "#### post: Number of post-synaptic sites on the segment\n",
+    "\n",
+    "#### type: Cell type name for given neuron (if provided)\n",
+    "\n",
+    "#### instance: String identifier for a neuron (if provided)\n",
+    "\n",
+    "#### size: Number of voxels in the body\n",
+    "\n",
+    "#### roiInfo: JSON string showing the pre and post breakdown for each ROI the neuron intersects.\n",
+    "\n",
+    "#### roi: This property only exists for the ROIs that intersect this segment\n",
+    "\n",
+    "#### tatus: Reconstruction status for a neuron. By convention, we broadly consider proofread neurons as being “Traced”.\n",
+    "\n",
+    "#### cropped: Since datasets often involve a portion of a larger brain, cropped indicates that a significant portion of a neuron is cut-off by the dataset extents. By convention, all “Traced” neurons should be explicitly noted whether they are cropped or not.\n",
+    "\n",
+    "_quote from [here](https://www.biorxiv.org/content/10.1101/2020.01.16.909465v1.full)_"
    ]
   }
  ],
