--- a/Neuprint/MultiDiGraphs-Neuprint.ipynb
+++ b/Neuprint/MultiDiGraphs-Neuprint.ipynb
@@ -47,7 +47,7 @@
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
     "from graph import GraphIO\n",
-    "G_Neuprint = nx.DiGraph()\n",
+    "G_Neuprint = nx.MultiDiGraph()\n",
     "df = pd.read_csv('Neuprint_connections.csv')\n",
     "df_2 = pd.read_csv('Neuprint_neuron_all.csv')\n",
     "df_3 = pd.read_csv('neuPrint_roicounts.csv')\n",
@@ -152,14 +152,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "n = 0\n",
     "for k in Id_pre:\n",
-    "    G_Neuprint.add_edge(Id_pre[n], Id_post[n])\n",
-    "    G_Neuprint.edges[Id_pre[n], Id_post[n]]['weight'] = wt[n]\n",
-    "    G_Neuprint.edges[Id_pre[n], Id_post[n]]['ROI'] = R_l[n]\n",
+    "    keys = G_Neuprint.add_edges_from([(Id_pre[n], Id_post[n], {'ROI': R_l[n]}), \n",
+    "                                      (Id_pre[n], Id_post[n], {\"weight\": wt[n]})])\n",
+    "#    G_Neuprint.add_edge(Id_pre[n], Id_post[n])\n",
+    "#    G_Neuprint.edges[Id_pre[n], Id_post[n], 0]['weight'] = wt[n]\n",
+    "#    G_Neuprint.edges[Id_pre[n], Id_post[n], 1]['ROI'] = R_l[n]\n",
+    "#    G_Neuprint.add_edge(Id_pre[n], Id_post[n], ROI = R_l[n])\n",
     "    G_Neuprint.nodes[Id_pre[n]][\"type_pre\"] = t_pre[n]\n",
     "    G_Neuprint.nodes[Id_pre[n]][\"instance_pre\"] = ins_pre[n]\n",
     "    G_Neuprint.nodes[Id_post[n]][\"type_post\"] = t_post[n]\n",
@@ -169,31 +174,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "unhashable type: 'dict'",
+     "evalue": "Must give a MultiGraph or MultiDiGraph to convert_multigraph",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-6ee1d4519ccf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mgraph\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mGraphIO\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmultigraph\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGraphIO\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlist_to_multigraph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mG_Neuprint\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0medge_att_names\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGraphIO\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfer_edge_attributes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mG_Neuprint\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mnode_att_names\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGraphIO\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfer_node_attributes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mG_Neuprint\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mgraph_att_names\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGraphIO\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfer_graph_attributes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mG_Neuprint\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mD:\\JHU\\lesson\\NDD\\Conectomes\\connectocross-file_spec\\graph\\grapgh_io.py\u001b[0m in \u001b[0;36mlist_to_multigraph\u001b[1;34m(graphs)\u001b[0m\n\u001b[0;32m     76\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     77\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 78\u001b[1;33m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mg\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgraphs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     79\u001b[0m             \u001b[0mnodes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0msource\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0medges\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mD:\\JHU\\lesson\\NDD\\Conectomes\\connectocross-file_spec\\graph\\grapgh_io.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     76\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     77\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 78\u001b[1;33m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mg\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgraphs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     79\u001b[0m             \u001b[0mnodes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0msource\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0medges\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'dict'"
+      "\u001b[1;32m<ipython-input-14-614098690b16>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mgraph\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mGraphIO\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mgraphs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGraphIO\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmultigraph_to_list\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mG_Neuprint\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0medge_att_names\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGraphIO\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfer_edge_attributes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mG_Neuprint\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mnode_att_names\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGraphIO\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfer_node_attributes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mG_Neuprint\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mgraph_att_names\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGraphIO\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfer_graph_attributes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mG_Neuprint\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\JHU\\lesson\\NDD\\Conectomes\\connectocross-file_spec\\graph\\grapgh_io.py\u001b[0m in \u001b[0;36mmultigraph_to_list\u001b[1;34m(mg)\u001b[0m\n\u001b[0;32m     48\u001b[0m             \u001b[0mg_class\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDiGraph\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 50\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Must give a MultiGraph or MultiDiGraph to convert_multigraph\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     51\u001b[0m         \u001b[0mkey_map\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m         \u001b[0mgraphs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: Must give a MultiGraph or MultiDiGraph to convert_multigraph"
      ]
     }
    ],
    "source": [
     "from graph import GraphIO\n",
-    "multigraph = GraphIO.list_to_multigraph([G_Neuprint])\n",
+    "graphs = GraphIO.multigraph_to_list([G_Neuprint])\n",
     "edge_att_names = GraphIO.infer_edge_attributes([G_Neuprint])\n",
     "node_att_names = GraphIO.infer_node_attributes([G_Neuprint])\n",
     "graph_att_names = GraphIO.infer_graph_attributes([G_Neuprint])\n",
     "# GraphIO.dump([G_Neuprint], './Neuprint/Neuprint_graph_update031621.json', edge_att_names, node_att_names, graph_att_names)\n",
-    "GraphIO.dump(multigraph, [G_Neuprint], './neuPrint/neuPrint_graphs.json')"
+    "GraphIO.dump(edge_att_names, node_att_names, graph_att_names, [G_Neuprint], './neuPrint/neuPrint_graph_.json')"
    ]
   },
   {
