--- a/Graph Stats.ipynb
+++ b/Graph Stats.ipynb
@@ -23,20 +23,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'c_elegans.worm_wiring.worm_wiring' has no attribute 'load_worm'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-875038640f22>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mworm_graphs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mworm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_worm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mwit_graphs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_wit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mworm_connectomes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mworm_graphs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'c_elegans.worm_wiring.worm_wiring' has no attribute 'load_worm'"
+     ]
+    }
+   ],
    "source": [
-    "from load_wit_nx import load_wit_nx\n",
-    "from load_worm_nx import load_worm_nx\n",
+    "from c_elegans.witvilet2020 import witvilet2020 as wit\n",
+    "from c_elegans.worm_wiring import worm_wiring as worm\n",
     "import networkx as nx\n",
     "from networkx.algorithms.components import number_strongly_connected_components as ncc_strong\n",
     "from networkx.algorithms.components import number_weakly_connected_components as ncc_weak\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "worm_graphs = load_worm_nx()\n",
-    "wit_graphs = load_wit_nx()\n",
+    "worm_graphs = worm.load_worm()\n",
+    "wit_graphs = wit.load_wit()\n",
     "worm_connectomes = worm_graphs[-6:]"
    ]
   },
