--- a/fafb/fafb_import.ipynb
+++ b/fafb/fafb_import.ipynb
@@ -10,24 +10,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.6.13"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python388jvsc74a57bd0edff9992f5981549ce355dfda8751582e04e29f2b676027b27bc02fe09043810",
-   "display_name": "Python 3.8.8 64-bit ('Fafb': conda)"
+   "name": "python3613jvsc74a57bd0a21abf3f463849612db64f4605d23fa1f600feadbdb07eabb76b49c4c71b4232",
+   "display_name": "Python 3.6.13 64-bit ('fafb': conda)"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
-  {
-   "source": [
-    "# Importing the Female Adult Fly Brain (FAFB) Connectome"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
   {
    "cell_type": "code",
    "execution_count": 1,
@@ -69,13 +62,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "skeleton_ids = [j for j in neurons[\"skeleton_ids\"]] # Get Skeleton IDs in list\n",
+    "neuron_ids = [j for j in neurons[\"skeleton_ids\"]] # Get neuron IDs\n",
     "\n",
-    "old = skeleton_ids\n",
-    "skeleton_ids = []\n",
+    "old = neuron_ids\n",
+    "neuron_ids = []\n",
     "\n",
     "for i in range(len(old)):\n",
-    "    skeleton_ids.append(old[i][0])"
+    "    neuron_ids.append(old[i][0])"
    ]
   },
   {
@@ -91,44 +84,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "connectome = pymaid.adjacency_matrix(skeleton_ids)"
+    "#pymaid.get_partners(neuron_ids)\n",
+    "#pymaid.cn_table_from_connectors(neuron_ids)\n",
+    "\n",
+    "metadata_dict = pymaid.get_annotations(neuron_ids)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "/mnt/c/Users/casey/Documents/School/Senior Year/First Semester/NDD/2020-2021/connectocross\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd .."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "from graph.grapgh_io import GraphIO\n",
-    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "connectome_nx = nx.from_pandas_adjacency(connectome, create_using=nx.DiGraph)"
+    "connectome = pymaid.adjacency_matrix(neuron_ids)\n",
+    "#connectome = connectome.to_numpy()\n",
+    "\n",
+    "#from graspologic.plot import heatmap\n",
+    "#heatmap(connectome)\n",
+    "\n",
+    "#plt.show()"
    ]
-  },
-  {
-   "source": [
-    "## Add Metadata"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -136,42 +113,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "count = 0\n",
-    "for id in connectome_nx.nodes:\n",
-    "    connectome_nx.nodes[id]['Name'] = neurons['name'][count]\n",
-    "    count += 1\n",
+    "from grapgh_io import GraphIO\n",
+    "import networkx as nx\n",
     "\n",
-    "    try:\n",
-    "        # Soma location, hemisphere\n",
-    "        df = pymaid.get_node_location(id)\n",
-    "        connectome_nx.nodes[id]['X'] = df['x'][0]\n",
-    "        connectome_nx.nodes[id]['Y'] = df['y'][0]\n",
-    "        connectome_nx.nodes[id]['Z'] = df['z'][0]\n",
-    "        if df['x'][0] < 550000:\n",
-    "            connectome_nx.nodes[id]['Side'] = 'L'\n",
-    "        else:\n",
-    "            connectome_nx.nodes[id]['Side'] = 'R'\n",
-    "    except:\n",
-    "        connectome_nx.nodes[id]['X'] = False\n",
-    "        connectome_nx.nodes[id]['Y'] = False\n",
-    "        connectome_nx.nodes[id]['Z'] = False\n",
-    "        connectome_nx.nodes[id]['Side'] = False\n"
+    "connectome_nx = nx.from_pandas_adjacency(connectome)"
    ]
   },
   {
-   "source": [
-    "## Create `.json` File"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "G = GraphIO.dump(connectome_nx, \"json_connectomes/fafb.json\")"
+    "for i in list(connectome_nx.nodes):\n",
+    "    connectome_nx.nodes[i]['annotation'] = metadata_dict[\"{}\".format(i)]\n",
+    "\n",
+    "G = GraphIO.dump(connectome_nx, \"./fafb.json\")"
    ]
   }
  ]
