add sex to witvilet graphs

--- a/Graph Stats.ipynb
+++ b/Graph Stats.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,9 +52,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'microscopy_method': 'tem', 'age': 45, 'developmental_stage': 'YA', 'Sex': 'Hermaphrodite'}\n",
+      "{'microscopy_method': 'tem', 'age': 45, 'developmental_stage': 'YA', 'Sex': 'Hermaphrodite'}\n",
+      "{'microscopy_method': 'sem', 'age': 45, 'developmental_stage': 'YA', 'Sex': 'Hermaphrodite'}\n",
+      "{'microscopy_method': 'sem', 'age': 45, 'developmental_stage': 'YA', 'Sex': 'Hermaphrodite'}\n",
+      "{'microscopy_method': 'sem', 'age': 0, 'developmental_stage': 'L1', 'Sex': 'Hermaphrodite'}\n",
+      "{'microscopy_method': 'sem', 'age': 0, 'developmental_stage': 'L1', 'Sex': 'Hermaphrodite'}\n",
+      "{'microscopy_method': 'tem', 'age': 5, 'developmental_stage': 'L1', 'Sex': 'Hermaphrodite'}\n",
+      "{'microscopy_method': 'tem', 'age': 5, 'developmental_stage': 'L1', 'Sex': 'Hermaphrodite'}\n",
+      "{'microscopy_method': 'sem', 'age': 8, 'developmental_stage': 'L1', 'Sex': 'Hermaphrodite'}\n",
+      "{'microscopy_method': 'sem', 'age': 8, 'developmental_stage': 'L1', 'Sex': 'Hermaphrodite'}\n",
+      "{'microscopy_method': 'sem', 'age': 16, 'developmental_stage': 'L1', 'Sex': 'Hermaphrodite'}\n",
+      "{'microscopy_method': 'sem', 'age': 16, 'developmental_stage': 'L1', 'Sex': 'Hermaphrodite'}\n",
+      "{'microscopy_method': 'sem', 'age': 23, 'developmental_stage': 'L2', 'Sex': 'Hermaphrodite'}\n",
+      "{'microscopy_method': 'sem', 'age': 23, 'developmental_stage': 'L2', 'Sex': 'Hermaphrodite'}\n",
+      "{'microscopy_method': 'tem', 'age': 27, 'developmental_stage': 'L3', 'Sex': 'Hermaphrodite'}\n",
+      "{'microscopy_method': 'tem', 'age': 27, 'developmental_stage': 'L3', 'Sex': 'Hermaphrodite'}\n"
+     ]
+    }
+   ],
    "source": [
     "lcc_size = [] #Instead of number of nodes -- number of nodes in largest weakly connected component\n",
     "density = []\n",
